modify package.json and add multiple keywords

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/y4ch0/SimplyWCAG.css.git"
   },
   "author": "Yacho",
-  "license": "ISC",
+  "license": "CC BY-SA 4.0",
   "description": "Lightweight, easy to use and accessible CSS framework",
   "bugs": {
     "url": "https://github.com/y4ch0/SimplyWCAG.css/issues"
